--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 /* Start of Donate-now section*/
 .donate-today {
   height: 600px;
+  background-color: #d0cbcb;
 }
 .amount-flex {
   display: flex;
@@ -28,35 +29,34 @@ body {
 }
 .d-amount h1 {
   padding-top: 27px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 #d-amount-200 {
-  text-decoration-color: #ff5959;
+  color: #ff5959;
   background-color: #ffeeee;
   border: 2px solid #ff5959;
 }
 .d-form {
-  display: inline;
+  width: 48%;
+  margin: 60px 25%;
+  justify-content: center;
 }
 .amount {
-  width: 300px;
+  width: 620px;
   height: 48px;
-  margin: 0px;
-  padding: 0;
-  border-radius: 10px 10px;
-  border: none;
-  background: #d9d9d9;
 }
 .Donate-now {
   width: 150px;
   height: 48px;
-  margin: 0px;
-  padding: 0;
   border: none;
-  border-radius: 10px 10px;
+  border-radius: 10px;
   color: white;
   background: #ff5959;
-  position: absolute;
+  outline: none;
+  display: block;
+  margin-top: 20px;
+  margin-left: 245px;
 }
 /* End of Donate-now section*/
 
