--- a/style.css
+++ b/style.css
@@ -5,13 +5,47 @@ body {
 }
 
 /* Start of banner section*/
+.banner {
+  height: 600px;
+  background-image: url(images/donation4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.b-text {
+  text-align: center;
+  padding-top: 300px;
+  color: white;
+}
+.b-text h1 {
+  font-weight: 700;
+}
 
+.b-text p {
+  font-weight: 300;
+}
+
+.banner a {
+  width: 150px;
+  height: 35px;
+
+  border-radius: 10px;
+  color: white;
+  background: #ff5959;
+
+  display: block;
+
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  padding-top: 15px;
+  margin-left: 45%;
+}
 /* End of banner section*/
 
 /* Start of Donate-now section*/
 .donate-today {
   height: 600px;
-  background-color: #d0cbcb;
+  background-color: rgb(245, 219, 219);
 }
 .amount-flex {
   display: flex;
@@ -38,13 +72,16 @@ body {
   border: 2px solid #ff5959;
 }
 .d-form {
-  width: 48%;
+  width: 49%;
   margin: 60px 25%;
   justify-content: center;
 }
 .amount {
-  width: 620px;
+  width: 100%;
   height: 48px;
+  border: none;
+  text-align: center;
+  border-bottom: 1px solid rgb(196, 196, 196);
 }
 .Donate-now {
   width: 150px;
@@ -56,7 +93,8 @@ body {
   outline: none;
   display: block;
   margin-top: 20px;
-  margin-left: 245px;
+  margin-left: 310px;
+  font-weight: 600;
 }
 /* End of Donate-now section*/
 
